--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-/* Style for the body */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
