--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     color: #333;
     text-align: center;
     margin-top: 50px;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: sans-serif, 'Josefin Sans';
     font-size: 36px;
 }
 
