--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'DM Mono';
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
@@ -22,7 +22,7 @@ body {
     color: #333;
     text-align: center;
     margin-top: 50px;
-    font-family: sans-serif, 'Josefin Sans';
+    font-family: 'DM Mono';
     font-size: 36px;
 }
 
